MDEV-24612: innodb hangs if it's initialization is broken before encryption threads are started

Do not init encryption threads if shutdown is in progress.